12 new pubs added

--- a/public/index.html
+++ b/public/index.html
@@ -605,6 +605,91 @@
             <div id="publicationslideshow" class="slideshowwrapper">
                 <div class="row">
                     <div class="slides twenty columns centered">
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/25147039" target="_blank">Lower extremity revascularization using directional atherectomy: 12-month prospective results of the DEFINITIVE LE study.</a></h3>
+                            <p class="date">2014 Aug;7(8):923-33</p>
+                            <h4>JACC: Cardiovasc Interventions</h4>
+                            <p>McKinsey JF, Zeller T, Rocha-Singh KJ, <b>Jaff MR</b>, Garcia LA</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24909590" target="_blank">Proper patient selection yields significant and sustained reduction in systolic blood pressure following renal artery stenting in patients with uncontrolled hypertension: long-term results from the HERCULES trial.</a></h3>
+                            <p class="date">2014 Jul;16(7):497-503</p>
+                            <h4>The Journal of Clinincal Hypertension</h4>
+                            <p>Chrysant GS, Bates MC, Sullivan TM, Bachinsky WB, Popma JJ, Peng L, Omran HL, <b>Jaff MR</b></p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24811601" target="_blank">Application of human type I pancreatic elastase (PRT-201) to the venous anastomosis of arteriovenous grafts in patients with chronic kidney disease.</a></h3>
+                            <p class="date">2014 May 3;0(0):0</p>
+                            <h4>The Journal of Vascular Access</h4>
+                            <p>Dwivedi AJ, Roy-Chaudhury P, Peden EK, Browne BJ, Ladenheim ED, Scavo VA, Gustafson PN, Wong MD, Magill M, Lindow F, Blair AT, <b>Jaff MR</b>, Franano FN, Burke SK</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24754279" target="_blank">Nitinol stent implantation in the superficial femoral artery and proximal popliteal artery: twelve-month results from the complete SE multicenter trial.</a></h3>
+                            <p class="date">2014 Apr;21(2):202-12</p>
+                            <h4>Journal of Endovascular Therapy</h4>
+                            <p>Laird JR, Jain A, Zeller T, Feldman R, Scheinert D, Popma JJ, Armstrong EJ, <b>Jaff MR</b></p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24684771" target="_blank">Human type I pancreatic elastase treatment of arteriovenous fistulas in patients with chronic kidney disease.</a></h3>
+                            <p class="date">2014 Aug;60(2):454-461.e1</p>
+                            <h4>Journal of Vascular Surgery</h4>
+                            <p>Hye RJ, Peden EK, O'Connor TP, Browne BJ, Dixon BS, Schanzer AS, Jensik SC, Dember LM, <b>Jaff MR</b>, Burke SK</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24402839" target="_blank">Peripheral arterial calcification: prevalence, mechanism, detection, and clinical implications.</a></h3>
+                            <p class="date">2014 May 1;83(6):E212-20</p>
+                            <h4>Catheterization and Cardiovascular Interventions</h4>
+                            <p>Rocha-Singh KJ, Zeller T, <b>Jaff MR</b></p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24307609" target="_blank">Blood pressure response to renal artery stenting in 901 patients from five prospective multicenter FDA-approved trials.</a></h3>
+                            <p class="date">2014 Mar 1;83(4):603-9</p>
+                            <h4>Catheterization and Cardiovascular Interventions</h4>
+                            <p>Weinberg I, Keyes MJ, Giri J, Rogers KR, Olin JW, White CJ, <b>Jaff MR</b></p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24245566" target="_blank">Stenting and medical therapy for atherosclerotic renal-artery stenosis.</a></h3>
+                            <p class="date">2014 Jan 2;370(1):13-22</p>
+                            <h4>New England Journal of Medicine</h4>
+                            <p>Cooper CJ1, Murphy TP, Cutlip DE, Jamerson K, Henrich W, Reid DM, Cohen DJ, Matsumoto AH, Steffes M, <b>Jaff MR</b>, Prince MR, Lewis EF, Tuttle KR, Shapiro JI,Rundback JH, Massaro JM, D'Agostino RB Sr, Dworkin LD</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/23676191" target="_blank">Three-year results of the VIBRANT trial of VIABAHN endoprosthesis versus bare nitinol stent implantation for complex superficial femoral artery occlusive disease.</a></h3>
+                            <p class="date">2013 Aug;58(2):386-95.e4</p>
+                            <h4>Journal of Vascular Surgergy</h4>
+                            <p>Geraghty PJ, Mewissen MW, <b>Jaff MR</b>, Ansel GM</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/23583245" target="_blank">Sustained safety and effectiveness of paclitaxel-eluting stents for femoropopliteal lesions: 2-year follow-up from the Zilver PTX randomized and single-arm clinical studies.</a></h3>
+                            <p class="date">2013 Jun 18;61(24):2417-27</p>
+                            <h4>Journal of the American College of Cardiology</h4>
+                            <p>Dake MD, Ansel GM, <b>Jaff MR</b>, Ohki T, Saxon RR, Smouse HB, Snyder SA, O'Leary EE, Tepe G, Scheinert D, Zeller T</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/23537968" target="_blank">Rationale and design of the ATTRACT Study: a multicenter randomized trial to evaluate pharmacomechanical catheter-directed thrombolysis for the prevention of postthrombotic syndrome in patients with proximal deep vein thrombosis.</a></h3>
+                            <p class="date">2013 Apr;165(4):523-530.e3</p>
+                            <h4>American Heart Journal</h4>
+                            <p>Vedantham S1, Goldhaber SZ, Kahn SR, Julian J, Magnuson E, <b>Jaff MR</b>, Murphy TP, Cohen DJ, Comerota AJ, Gornik HL, Razavi MK, Lewis L, Kearon C</p>
+                        </div>
+
+                        <div class="slide">
+                            <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/23177300" target="_blank">Zotarolimus-eluting peripheral stents for the treatment of erectile dysfunction in subjects with suboptimal response to phosphodiesterase-5 inhibitors.</a></h3>
+                            <p class="date">2012 Dec 25;60(25):2618-27</p>
+                            <h4>Journal of the American College of Cardiology</h4>
+                            <p>Rogers JH, Goldstein I, Kandzari DE, Köhler TS, Stinis CT, Wagner PJ, Popma JJ, <b>Jaff MR</b>, Rocha-Singh KJ</p>
+                        </div>
+
+                        <!-- Pre October 22, 2014 update: -->
                         <div class="slide"> <!-- Slide 21 -->
                             <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/22422738" target="_blank">Excimer laser with adjunctive balloon angioplasty and heparin coated self expanding stent grafts for the treatment of femoropopliteal artery in-stent restenosis: twelve month results from the SALVAGE trial.</a></h3>
                             <p class="date">2012; Mar 15</p>
