Updated Debra's title to AD

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                                             <img src="/images/photo_debra-jaff.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Business Manager</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Administrative Director</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
