--- a/public/index.html
+++ b/public/index.html
@@ -615,7 +615,7 @@
                         <div class="slide">
                             <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/24909590" target="_blank">Proper patient selection yields significant and sustained reduction in systolic blood pressure following renal artery stenting in patients with uncontrolled hypertension: long-term results from the HERCULES trial.</a></h3>
                             <p class="date">2014 Jul;16(7):497-503</p>
-                            <h4>The Journal of Clinincal Hypertension</h4>
+                            <h4>The Journal of Clinical Hypertension</h4>
                             <p>Chrysant GS, Bates MC, Sullivan TM, Bachinsky WB, Popma JJ, Peng L, Omran HL, <b>Jaff MR</b></p>
                         </div>
 
