--- a/public/index.html
+++ b/public/index.html
@@ -608,7 +608,7 @@
                         <div class="slide">
                             <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/25147039" target="_blank">Lower extremity revascularization using directional atherectomy: 12-month prospective results of the DEFINITIVE LE study.</a></h3>
                             <p class="date">2014 Aug;7(8):923-33</p>
-                            <h4>JACC: Cardiovasc Interventions</h4>
+                            <h4>JACC: Cardiovascular Interventions</h4>
                             <p>McKinsey JF, Zeller T, Rocha-Singh KJ, <b>Jaff MR</b>, Garcia LA</p>
                         </div>
 
@@ -840,7 +840,7 @@
                 	<h3>Location</h3>
                     <div class="contact-info">
                     	<p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                    		<span itemprop="streetAddress"><span>62</span> Staniford St.</span>
+                    		<span itemprop="streetAddress"><span>One</span> Bowdoin Square<br />10<sup>th</sup> Floor</span>
                     		<span class="city-state"><span itemprop="addressLocality">Boston</span>, <span itemprop="addressRegion">MA</span></span>
                     		<span itemprop="postalCode">02114</span>
                     	</p>
