Updated Google Maps link for address

--- a/public/index.html
+++ b/public/index.html
@@ -844,7 +844,7 @@
                     		<span class="city-state"><span itemprop="addressLocality">Boston</span>, <span itemprop="addressRegion">MA</span></span>
                     		<span itemprop="postalCode">02114</span>
                     	</p>
-                        <p><a href="http://goo.gl/maps/SCqbN" target="_blank" class="arrow">Map</a></p>
+                        <p><a href="https://www.google.com/maps/place/1+Bowdoin+Square,+Boston,+MA+02114/@42.36198,-71.0621295,17z" target="_blank" class="arrow">Map</a></p>
                     </div>
                 </div>
                 <div class="six columns" id="phone-fax">
