--- a/public/index.html
+++ b/public/index.html
@@ -284,6 +284,49 @@
                                 </figure>
                             </a>
                         </div>
+
+                        <div class="ten columns">
+                            <a href="bio_sabina-dhami.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
+                                        <div data-src="/images/photo_sabina-dhami@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_sabina-dhami.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_sabina-dhami.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Sabina Dhami</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_lindsey-st-louis.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_lindsey-st-louis.jpg"></div>
+                                        <div data-src="/images/photo_lindsey-st-louis@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_lindsey-st-louis.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_lindsey-st-louis.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Lindsey St. Louis</span><span itemprop="jobTitle">Administrative Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
