--- a/public/index.html
+++ b/public/index.html
@@ -180,26 +180,6 @@
                     <div class="row">
 
                         <div class="ten columns">
-                            <a href="bio_josh-beckman.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_josh-beckman.jpg"></div>
-                                        <div data-src="/images/photo_josh-beckman@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_josh-beckman.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_josh-beckman.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Joshua Beckman, MD</span><span itemprop="jobTitle">Physician Staff Interpreter</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                        <div class="ten columns">
                             <a href="bio_victoria-sova.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -219,8 +199,7 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
+
                         <div class="ten columns">
                             <a href="bio_erin-lacey.html" class="reveal">
                                 <figure>
@@ -241,7 +220,9 @@
                                 </figure>
                             </a>
                         </div>
-
+                    </div>
+                    <div class="row">
+                        
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
@@ -262,8 +243,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_ritu-shrestha.html" class="reveal">
                                 <figure>
@@ -284,7 +263,9 @@
                                 </figure>
                             </a>
                         </div>
-
+                    </div>
+                    <div class="row">
+                    
                         <div class="ten columns">
                             <a href="bio_sabina-dhami.html" class="reveal">
                                 <figure>
@@ -305,8 +286,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_lindsey-st-louis.html" class="reveal">
                                 <figure>
@@ -323,7 +302,7 @@
                                             <img src="/images/photo_lindsey-st-louis.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Lindsey St. Louis</span><span itemprop="jobTitle">Administrative Assistant</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Lindsey St. Louis</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
