Updating honorifics for Gail and Erin on homepage and bios

--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
                                             <img src="/images/photo_gail-hadley.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Gail L. Hadley, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Director</span></p>
+                                    <figcaption><p><span itemprop="name">Gail L. Hadley, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span>, <span itemprop="honorificSuffix">FSVU</span></span> <span itemprop="jobTitle">Technical Director</span></p>
                                     </figcaption>
                                 </figure>
                             </a>
@@ -216,7 +216,7 @@
                                             <img src="/images/photo_erin-lacey.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Erin Lacey</span><span itemprop="jobTitle">Office Manager</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Erin Lacey, MS</span><span itemprop="jobTitle">Office Manager</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
