--- a/public/index.html
+++ b/public/index.html
@@ -201,6 +201,49 @@
                         </div>
 
                         <div class="ten columns">
+                            <a href="bio_ido-weinberg.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
+                                        <div data-src="/images/photo_ido-weinberg@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_ido-weinberg.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_ido-weinberg.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">&nbsp;</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_heather-marino.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_heather-marino.jpg"></div>
+                                        <div data-src="/images/photo_heather-marino@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_heather-marino.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_heather-marino.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Heather Marino, <span itemprop="honorificSuffix">MA</span>, <span itemprop="honorificSuffix">MLA</span></span><span itemprop="jobTitle">Sr. Administrative Manager</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
+                        <div class="ten columns">
                             <a href="bio_erin-lacey.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -216,13 +259,13 @@
                                             <img src="/images/photo_erin-lacey.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Erin Lacey, MS</span><span itemprop="jobTitle">Office Manager</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Erin Lacey, <span itemprop="honorificSuffix">MS</span></span><span itemprop="jobTitle">Office Manager</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
                     </div>
+
                     <div class="row">
-                        
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
@@ -303,6 +346,29 @@
                                         </noscript>
                                     </div>
                                     <figcaption><p><span itemprop="name">Lindsey St. Louis</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_justin-thompson.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_justin-thompson.jpg"></div>
+                                        <div data-src="/images/photo_justin-thompson@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_justin-thompson.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_justin-thompson.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Justin Thompson</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
