Updating Ido's title

--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@
                                             <img src="/images/photo_ido-weinberg.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">&nbsp;</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">Physician Reviewer</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
