--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
                                             <img src="/images/photo_erin-lacey.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Erin Lacey, <span itemprop="honorificSuffix">MS</span></span><span itemprop="jobTitle">Office Manager</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Erin Lacey, <span itemprop="honorificSuffix">MS</span></span><span itemprop="jobTitle">Administrative Manager</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -259,7 +259,7 @@
                                             <img src="/images/photo_justin-mcneil.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Project Manager</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Project Team Lead</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -311,26 +311,6 @@
                     </div>
 
                     <div class="row">
-                        <div class="ten columns">
-                            <a href="bio_lindsey-st-louis.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_lindsey-st-louis.jpg"></div>
-                                        <div data-src="/images/photo_lindsey-st-louis@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_lindsey-st-louis.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_lindsey-st-louis.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Lindsey St. Louis</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
                         <div class="ten columns">
                             <a href="bio_justin-thompson.html" class="reveal">
                                 <figure>
