--- a/public/index.html
+++ b/public/index.html
@@ -267,6 +267,27 @@
 
                     <div class="row">
                         <div class="ten columns">
+                            <a href="bio_meghna-lahiry.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_meghna-lahiry.jpg"></div>
+                                        <div data-src="/images/photo_meghna-lahiry@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_meghna-lahiry.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_meghna-lahiry.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Meghna Lahiry</span><span itemprop="jobTitle">Administrative Coordinator</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
+                        <div class="ten columns">
                             <a href="bio_ritu-shrestha.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -287,6 +308,9 @@
                             </a>
                         </div>
 
+                    </div>
+
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_sabina-dhami.html" class="reveal">
                                 <figure>
@@ -307,10 +331,6 @@
                                 </figure>
                             </a>
                         </div>
-
-                    </div>
-
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_justin-thompson.html" class="reveal">
                                 <figure>
@@ -331,6 +351,29 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_luis-cintron.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_luis-cintron.jpg"></div>
+                                        <div data-src="/images/photo_luis-cintron@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_luis-cintron.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_luis-cintron.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Luis Cintron</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -912,7 +955,7 @@
             </div>
             <div class="footer"><div class="row">
                 <div class="twenty columns">
-                    <p>&copy; 2013 VasCore. All rights reserved.</p>
+                    <p>&copy; 2016 VasCore. All rights reserved.</p>
                     <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
                 </div>
             </div></div>
