--- a/public/index.html
+++ b/public/index.html
@@ -373,6 +373,26 @@
                                 </figure>
                             </a>
                         </div>
+                        <div class="ten columns">
+                            <a href="bio_brian-chung.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_brian-chung.jpg"></div>
+                                        <div data-src="/images/photo_brian-chung@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_brian-chung.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_brian-chung.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Brian Chung</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
 
                     </div>
                 </div>
