Ido's job title

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
                                             <img src="/images/photo_ido-weinberg.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">Director</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Ido Weinberg, <span itemprop="honorificSuffix">MD</span>, <span itemprop="honorificSuffix">MSc</span>, <span itemprop="honorificSuffix">MHA</span>, <span itemprop="honorificSuffix">FSVM</span>, <span itemprop="honorificSuffix">RPVI</span></span><span itemprop="jobTitle">Medical Director</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -240,7 +240,7 @@
                                             <img src="/images/photo_kathryn-lane.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Kathryn Lane, <span itemprop="honorificSuffix">LPN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">TBD</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Kathryn Lane, <span itemprop="honorificSuffix">LPN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
